# cc-translate-proxy

./: .gitignore  LICENSE  README.md  chinese-claude  providers.toml.example  pyproject.toml
.ai-sdlc/: journal.md  state.md
.github/workflows/: ci.yml
scripts/: claude-english.sh  proxy-background.sh  render.sh  render_server.py  render_templates.py
src/cc_i18n_proxy/: __main__.py  audit.py  cache.py  config.py  emitter.py  intl_sentinel.py  pipeline.py  schema_parser.py  server.py  translator.py
src/cc_i18n_proxy/providers/: __init__.py  config.py  state.py
tests/: conftest.py  test_audit.py  test_cache.py  test_classify_user_text.py  test_config.py  test_emit_skip_system.py  test_emitter.py  test_grace_degrade.py  test_intl_marker.py  test_intl_sentinel.py  test_openai_compat_adapter.py  test_pipeline.py  test_pipeline_result.py  test_provider_config.py  test_recap_endpoint.py  test_render_last_enable.py  test_render_retry_proxy.py  test_render_server.py  test_render_session_turns.py  test_render_workspace.py  test_retry_endpoint.py  test_schema_parser.py  test_server_smoke.py  test_state_store.py  test_trace_translation.py  test_translator.py  test_translator_chain.py  test_translator_errors.py  test_translator_prompt.py
