[project]
name = "cc-translate-proxy"
version = "0.1.0"
description = "Sidecar translation proxy for Claude Code — English upstream, Traditional Chinese render"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/0x7067/cc-translate-proxy"
Repository = "https://github.com/0x7067/cc-translate-proxy"
Issues = "https://github.com/0x7067/cc-translate-proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_i18n_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Private-only daemon, mid-refactor; not shipped to the public repo.
"scripts/statusline_daemon.py" = ["F401", "E402"]
